--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
       "atom-text-editor": "file-split:split"
 
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/atom": "^1.28.0",
+    "@types/node": "^10.10.1",
+    "tslint": "^5.11.0",
+    "tslint-clean-code": "^0.2.7",
+    "typescript": "^3.0.3"
   }
 }
