--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "file-split",
   "main": "./dist/main",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Separate file content at cursor points into multiple files",
   "keywords": [
     "multiple",
     "cursor",
